# LearnCMake

./: .gitignore  CMakeCache.txt  CMakeLists.txt  vcpkg.json
fifth/: CMakeLists.txt  main.cpp
fifth/calculator/: CMakeLists.txt  calculator.cpp  calculator.h
fifth/common/: CMakeLists.txt  common.cpp  common.h
fifth/minus/: CMakeLists.txt  minus.cpp  minus.h
fifth/sum/: CMakeLists.txt  sum.cpp  sum.h
first/: CMakeLists.txt  main.cpp
fourth/: CMakeLists.txt  main.cpp
fourth/helpers/: CMakeLists.txt  sum.cpp  sum.hpp
opencv_config/: CMakeLists.txt  main.cpp
second/: CMakeLists.txt  main.cpp
sixth/: CMakeLists.txt
sixth/core/: CMakeLists.txt
sixth/core/Math/: Math.cpp  Math.h
sixth/core/Renderer/: Application.cpp  Application.h  Base.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h
sixth/sandbox/: CMakeLists.txt  main.cpp
third/: CMakeLists.txt  main.cpp  sum.hpp
third/helpers/: CMakeLists.txt  sum.cpp  sum.h
third/lib/: helpers_static.lib
